# cpu-project-2

./: .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  README.md
cmake/: common.cmake  gptoss-config.cmake.in  gptoss.pc.in
common/: CMakeLists.txt  arg.cpp  arg.h  build-info.cpp.in  chat.cpp  chat.h  common.cpp  common.h  console.cpp  json-partial.cpp  json-schema-to-grammar.cpp  llguidance.cpp  log.cpp  log.h  ngram-cache.cpp  ngram-cache.h  sampling.cpp  sampling.h  speculative.cpp  speculative.h
ggml/: CMakeLists.txt
ggml/include/: ggml-cpu.h  ggml.h
ggml/src/: CMakeLists.txt  ggml-cpu-attn-q8-avx2.c  ggml.c
ggml/src/ggml-cpu/: CMakeLists.txt  arch-fallback.h  ggml-cpu-attn.c  ggml-cpu-impl.h  ggml-cpu-mxfp4-avx2.c  ggml-cpu-q4k-avx2.c  ggml-cpu-qkv.c  ggml-cpu.c  ggml-cpu.cpp  ops.cpp  ops.h  simd-mappings.h  vec.cpp  vec.h
ggml/src/ggml-cpu/amx/: amx.cpp
ggml/src/ggml-cpu/gptossfile/: sgemm.cpp  sgemm.h
include/: gptoss-cpp.h  gptoss.h
models/: README.md
scripts/: hf_download.sh
src/: CMakeLists.txt  gptoss-adapter.cpp  gptoss-adapter.h  gptoss-arch.cpp  gptoss-arch.h  gptoss-batch.cpp  gptoss-batch.h  gptoss-chat.cpp  gptoss-chat.h  gptoss-context.cpp  gptoss-context.h  gptoss-cparams.cpp  gptoss-cparams.h  gptoss-grammar.cpp  gptoss-grammar.h  gptoss-graph.cpp  gptoss-graph.h  gptoss-hparams.cpp  gptoss-hparams.h  gptoss-impl.cpp  gptoss-impl.h  gptoss-io.cpp  gptoss-io.h  gptoss-kv-cache-iswa.cpp  gptoss-kv-cache-iswa.h  gptoss-kv-cache.cpp  gptoss-kv-cache.h  gptoss-kv-cells.h  gptoss-kv-layout.cpp  gptoss-kv-layout.h  gptoss-kv-view.h  gptoss-memory-hybrid.cpp  gptoss-memory-hybrid.h  gptoss-memory-recurrent.cpp  gptoss-memory-recurrent.h  gptoss-memory.cpp  gptoss-memory.h  gptoss-mmap.cpp  gptoss-mmap.h  gptoss-model-loader.cpp  (+15 more)
tools/: CMakeLists.txt  test_decode_fastpaths.sh
tools/bench/: CHECKLIST.md  baseline.sh  compare.sh  cpu_pinning.sh  kv_layout_smoke.sh  prompts.txt  prompts10.txt  run.sh  tps_suite.cpp  true_tps.sh
tools/main/: CMakeLists.txt  README.md  main.cpp
